# collabvm-cpp-client

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Readme.md  client.cpp  client.h  collabvm-qt-client.qrc  cvm_client_main.cpp  globals.h  guac.h  main.cpp  readme.md  test.cpp  testing.cpp
.github/workflows/: cmake-multi-platform.yml
client/: setup.cpp
cmake/: ixwebsocket.cmake  mbedtls.cmake  windows_metafile.rc.in
cmake/cpm/: zlib.cmake
src/: cvm.h  guac.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  models.h  ws.cpp  ws.h
src/cvm/: cvm.cpp  cvm.h  server.cpp  server.h  server_manager.cpp  server_manager.h  ws.cpp  ws.h
src/cvm/models/: chat_message_list.cpp  chat_message_list.h  user.cpp  user.h  user_list.cpp  user_list.h  vm_list.cpp  vm_list.h  vm_list_model.cpp  vm_list_model.h
src/cvm/models/delegates/: user.cpp  user.h  vm.cpp  vm.h  vm_delegate.cpp  vm_delegate.h
src/cvm/models/proxies/: user_filter.cpp  user_filter.h  user_filter_proxy.cpp  user_filter_proxy.h
src/cvm/ws/: ws_client.cpp  ws_client.h  ws_manager.cpp  ws_manager.h
src/settings/: settings_manager.cpp  settings_manager.h
src/ui/: main_window.cpp  main_window.h  main_window.ui  mainwindow.cpp  mainwindow.h  settings_dialog.cpp  settings_dialog.ui
src/ui/settings/: settings_dialog.cpp  settings_dialog.h  settings_dialog.ui
src/ui/vms/: vm_window.cpp  vm_window.h  vm_window.ui
